--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Miko Poh # your name (or website title) here
-logo: "" # your photo (or logo) here
+logo: # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://sg.linkedin.com/in/mikopoh/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
