--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: Miko Poh # your name (or website title) here
 logo: # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
+  Recent data science graduate with more than 7 years of experience in laboratory management, research and data analytics. Has 1+ year of 
+  experience in stock market analysis.
   <br><br>
   <a href="https://sg.linkedin.com/in/mikopoh/">View My LinkedIn Profile</a> 
   
